# ComGMem

./: .env  .env.example  .gitignore  README.md  pyproject.toml
c_hypermem/: config.py  memory.py  schema.py
c_hypermem/embeddings/: __init__.py  model_client.py
c_hypermem/llms/: __init__.py  openai_compatible.py  retrying.py
c_hypermem/pipeline/: __init__.py  assembly.py  edge_cluster_builder.py  extraction.py  graph_utils.py  hyperedge_builder.py  ingestion.py  local_graph_builder.py  maintenance.py  node_builder.py
c_hypermem/retrieval/: context.py  expansion.py  fusion.py  graph_ripple.py  lexical_recall.py  query_analysis.py  ranking.py  recall.py  vector_recall.py
c_hypermem/stores/: __init__.py  base.py  lexical_store.py  sqlite_store.py  vector_store.py
c_hypermem/utils/: ids.py  prompts.py  time.py
comgmem/: __init__.py  config.py  errors.py  memory.py
comgmem/adapters/: __init__.py
comgmem/embeddings/: __init__.py  base.py  model_client.py
configs/: default.yaml  models.yaml  node_labels.yaml
docs/: current_implementation.md  development_architecture.md  homogeneous_node_hyperedge_refactor.md  hypergraph_memory_architecture.md  memory_maintenance_implementation_diff.md  retrieval_design.md
examples/: longmemeval_dialogue_smoke.py  longmemeval_s_cleaned_smoke_dialogue_1.json  longmemeval_s_cleaned_smoke_eval.py  quickstart.py
tests/: test_homogeneous_ingestion.py  test_llm_parse_retries.py  test_memory.py  test_memory_logging.py  test_retrieval_ranking.py  test_schema_refactor.py  test_token_limit_compression.py  test_triple_ids.py
(+50 files in other folders)
